--- a/gsalary_best.ipynb
+++ b/gsalary_best.ipynb
@@ -17,7 +17,7 @@
    "id": "774ec058",
    "metadata": {},
    "source": [
-    "### BAR CHATS SHOWING MEDIAN SALARIES BY AGE"
+    "### BAR CHATS SHOWING MEDIAN SALARIES OF PROGRAMMERS BY AGE"
    ]
   },
   {
