--- a/gsalary_best.ipynb
+++ b/gsalary_best.ipynb
@@ -71,7 +71,7 @@
     "plt.ylabel(\"Median Salary (USD)\")\n",
     "plt.legend()\n",
     "plt.tight_layout()\n",
-    "plt.title(\"Median Salary (USD) by Age\", color = \"k\")\n",
+    "plt.title(\"Median Salary of Programmers in (USD) by Age\", color = \"k\")\n",
     "plt.show"
    ]
   },
